--- a/src/blocks/advantages/advantages.html
+++ b/src/blocks/advantages/advantages.html
@@ -9,7 +9,7 @@
       <ul class="splide__list">
         <li class="splide__slide">
           <article class="banner-card">
-            <picture>
+            <picture class="banner-card__image-wrap">
               <source
                 srcset="./images/advantages__image-01.webp"
                 type="image/webp"
@@ -34,7 +34,7 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <picture>
+            <picture class="banner-card__image-wrap">
               <source
                 srcset="./images/advantages__image-01.webp"
                 type="image/webp"
@@ -60,7 +60,7 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <picture>
+            <picture class="banner-card__image-wrap">
               <source
                 srcset="./images/advantages__image-01.webp"
                 type="image/webp"
@@ -88,7 +88,7 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <picture>
+            <picture class="banner-card__image-wrap">
               <source
                 srcset="./images/advantages__image-01.webp"
                 type="image/webp"
@@ -115,7 +115,7 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <picture>
+            <picture class="banner-card__image-wrap">
               <source
                 srcset="./images/advantages__image-01.webp"
                 type="image/webp"
@@ -143,7 +143,7 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <picture>
+            <picture class="banner-card__image-wrap">
               <source
                 srcset="./images/advantages__image-01.webp"
                 type="image/webp"
@@ -168,7 +168,7 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <picture>
+            <picture class="banner-card__image-wrap">
               <source
                 srcset="./images/advantages__image-01.webp"
                 type="image/webp"
