--- a/src/blocks/footer/footer.html
+++ b/src/blocks/footer/footer.html
@@ -29,8 +29,9 @@
         <ul class="footer__nav-list">
           <li><a class="footer__link" href="#0">Главная</a></li>
           <li><a class="footer__link" href="#0">Преимущества</a></li>
+          <li><a class="footer__link" href="#0">Особенности</a></li>
+          <li><a class="footer__link" href="#0">Как это работает</a></li>
           <li><a class="footer__link" href="#0">Тарифы</a></li>
-          <li><a class="footer__link" href="#0">FAQ</a></li>
         </ul>
       </nav>
     </div>
