--- a/src/blocks/hiw/hiw.html
+++ b/src/blocks/hiw/hiw.html
@@ -99,31 +99,31 @@
         </li>
       </ul>
       <div class="hiw__images">
-        <picture>
+        <picture class="hiw__image-wrap hiw__image-wrap_active">
           <source srcset="./images/hiw__image-01.webp" type="image/webp" />
           <img
-            class="hiw__image hiw__image_active"
+            class="hiw__image"
             src="./images/hiw__image-01.png"
             alt=""
           />
         </picture>
-        <picture>
+        <picture class="hiw__image-wrap">
           <source srcset="./images/hiw__image-02.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-02.png" alt="" />
         </picture>
-        <picture>
+        <picture class="hiw__image-wrap">
           <source srcset="./images/hiw__image-03.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-03.png" alt="" />
         </picture>
-        <picture>
+        <picture class="hiw__image-wrap">
           <source srcset="./images/hiw__image-04.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-04.png" alt="" />
         </picture>
-        <picture>
+        <picture class="hiw__image-wrap">
           <source srcset="./images/hiw__image-05.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-05.png" alt="" />
         </picture>
-        <picture>
+        <picture class="hiw__image-wrap">
           <source srcset="./images/hiw__image-06.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-06.png" alt="" />
         </picture>
