--- a/src/blocks/statistics/statistics.html
+++ b/src/blocks/statistics/statistics.html
@@ -1,6 +1,6 @@
 <!-- Статистика -->
 <section class="statistics section" aria-label="Статистика">
-  <div class="section__indent section__card section__card_bg_accent">
+  <div class="section__indent section__card section__card_bg_accent statistics__card">
     <ul class="statistics__list">
       <li class="statistics__item">
         <p class="statistics__title">
@@ -33,8 +33,7 @@
             >
           </span>
           <span class="statistics__title-span"
-            >потребителей считают, что электронные меню упрощают выбор
-            блюд</span
+            >потребителей считают, что электронные меню упрощают выбор блюд</span
           >
         </p>
       </li>
