--- a/src/blocks/step/step.html
+++ b/src/blocks/step/step.html
@@ -1,5 +1,5 @@
 <!-- Настройте Qr-меню -->
-<section class="section section_no_indent step">
+<section class="section section_no-indent step">
   <h2 class="section__title section__title_section-indent">
     Настройте Qr-меню легко и быстро
   </h2>
@@ -45,7 +45,9 @@
               <p class="step__card-label-text">Шаг 2</p>
               <h3 class="step__card-title">Заполните меню</h3>
               <div class="step__card-description">
-                <p>Создайте категории, загрузите фотографии и напишите описание</p>
+                <p>
+                  Создайте категории, загрузите фотографии и напишите описание
+                </p>
               </div>
               <div class="step__card-progress">
                 <span
@@ -62,11 +64,13 @@
         </li>
         <li class="splide__slide">
           <article class="step__card">
-            <img
+            <div
               class="step__card-image"
-              src="./images/step__image-01.png"
-              alt=""
-            />
+              style="
+                background-image: url('./images/step__image-03.png');
+                background-image: url('./images/step__image-03.webp');
+              "
+            ></div>
             <div class="step__card-content">
               <p class="step__card-label-text">Шаг 3</p>
               <h3 class="step__card-title">Настройте</h3>
@@ -90,11 +94,13 @@
         </li>
         <li class="splide__slide">
           <article class="step__card">
-            <img
+            <div
               class="step__card-image"
-              src="./images/step__image-01.png"
-              alt=""
-            />
+              style="
+                background-image: url('./images/step__image-04.png');
+                background-image: url('./images/step__image-04.webp');
+              "
+            ></div>
             <div class="step__card-content">
               <p class="step__card-label-text">Шаг 4</p>
               <h3 class="step__card-title">Распечатайте меню</h3>
