--- a/src/blocks/why/why.html
+++ b/src/blocks/why/why.html
@@ -1,5 +1,5 @@
 <!-- Почему пользуются -->
-<section class="section why">
+<section class="section section_no-indent why">
   <div class="section__indent">
     <h2 class="section__title">
       Почему рестораны пользуются <br />
