--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,233 +9,12 @@
         @@include("../blocks/statistics/statistics.html")
         @@include("../blocks/advantages/advantages.html")
         @@include("../blocks/why/why.html")
-        <!-- @@include("../blocks/how/how.html") -->
-        <!-- Особенности -->
-        <!-- <section class="section">
-          <div class="section__indent">
-            <h2 class="section__title">
-              Особенности нашего <span class="text-decor">Qr-меню</span>
-            </h2>
-            <ul class="section__list section__three-columns">
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#time"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">Быстрый старт</h3>
-                  <div class="card__description">
-                    <p>
-                      Подключите за 15 минут без сложных настроек, покупки
-                      дорогого оборудования и обучения персонала.
-                    </p>
-                  </div>
-                </article>
-              </li>
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#establishments"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">
-                    Нет ограничений по количеству заведений у организации
-                  </h3>
-                  <div class="card__description">
-                    <p>
-                      Заводите разные меню для каждого заведения, используйте
-                      уникальные меню для бизнес ланчей и завтраков
-                    </p>
-                  </div>
-                </article>
-              </li>
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#theme"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">
-                    Комфортная цветовая схема день/ночь
-                  </h3>
-                  <div class="card__description">
-                    <p>
-                      Обеспечивает удобство восприятия информации, улучшает
-                      общее впечатление от сайта.
-                    </p>
-                  </div>
-                </article>
-              </li>
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#language"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">Возможность выбора языка</h3>
-                  <div class="card__description">
-                    <p>
-                      Поможет привлечь больше клиентов и сделать ваш бизнес
-                      более интернациональным.
-                    </p>
-                  </div>
-                </article>
-              </li>
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#banner"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">
-                    Загрузите фирменный баннер и логотип
-                  </h3>
-                  <div class="card__description">
-                    <p>
-                      Передайте гостям уникальную атмосферу заведения, повысьте
-                      узнаваемость бренда и улучшите имидж компании.
-                    </p>
-                  </div>
-                </article>
-              </li>
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#colors"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">Укажите фирменный цвет</h3>
-                  <div class="card__description">
-                    <p>
-                      Упростит навигацию на странице для гостей, повысит
-                      лояльность к бренду.
-                    </p>
-                  </div>
-                </article>
-              </li>
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#borders"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">Настройте тонкий дизайн страницы</h3>
-                  <div class="card__description">
-                    <p>
-                      Возможность закругления углов для карточек в трёх режимах
-                      позволит сделать страницу уникальной и наиболее приблизить
-                      её к бренду.
-                    </p>
-                  </div>
-                </article>
-              </li>
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#menu"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">Удобное настраиваемое меню</h3>
-                  <div class="card__description">
-                    <p>
-                      Предусмотрена возможность добавления нескольких меню
-                      и категорий при необходимости.
-                    </p>
-                  </div>
-                </article>
-              </li>
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#icons"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">Красивая и удобная графика</h3>
-                  <div class="card__description">
-                    <p>
-                      Подобраны уникальные иконки для категорий меню, заглушки
-                      для фото карточек товаров, что упростит гостям навигацию
-                      на странице.
-                    </p>
-                  </div>
-                </article>
-              </li>
-              <li>
-                <article class="card card_theme_outline card_content_border">
-                  <span class="card__icon">
-                    <svg
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 102 102"
-                    >
-                      <use href="./images/icons.svg#images"></use>
-                    </svg>
-                  </span>
-                  <h3 class="card__title">Добавляйте свои фото</h3>
-                  <div class="card__description">
-                    <p>
-                      Добавляйте яркие и сочные фото в категории и карточки,
-                      сделайте меню ещё привлекательнее для гостей.
-                    </p>
-                  </div>
-                </article>
-              </li>
-            </ul>
-          </div>
-        </section> -->
-        <!-- @@include("../blocks/hiw/hiw.html") -->
-        <!-- @@include("../blocks/step/step.html") -->
-        <!-- <section class="section section_no_indent">
-          <h2 class="section__title section__title_section-indent">
-            Комфортная цветовая схема
-            <span class="text-decor text-decor_accent">день/ночь</span>
-          </h2>
-        </section> -->
+        @@include("../blocks/how/how.html")
+        @@include("../blocks/features/features.html")
+        @@include("../blocks/hiw/hiw.html")
+        @@include("../blocks/step/step.html")
+        @@include("../blocks/theme/theme.html")
+        @@include("../blocks/pricing/pricing.html")
       </main>
       @@include("../blocks/footer/footer.html")
     </div>
