--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -19,13 +19,13 @@
         <a class="header__link" href="#0">Преимущества</a>
       </li>
       <li class="header__list-item">
+        <a class="header__link" href="#0">Особенности</a>
+      </li>
+      <li class="header__list-item">
         <a class="header__link" href="#0">Как это работает</a>
       </li>
       <li class="header__list-item">
         <a class="header__link" href="#0">Тарифы</a>
-      </li>
-      <li class="header__list-item">
-        <a class="header__link" href="#0">FAQ</a>
       </li>
     </ul>
     <ul class="header__social-list">
@@ -35,7 +35,7 @@
             class="header__social-icon"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 40 40"
+            viewBox="0 0 32 32"
           >
             <use href="./images/icons.svg#whatsapp"></use>
           </svg>
@@ -47,7 +47,7 @@
             class="header__social-icon"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 40 40"
+            viewBox="0 0 32 32"
           >
             <use href="./images/icons.svg#telegram"></use>
           </svg>
