--- a/src/blocks/how/how.html
+++ b/src/blocks/how/how.html
@@ -1,7 +1,7 @@
 <!-- Как это работает? -->
 <section class="section how">
   <div class="section__indent section__card how__card">
-    <picture>
+    <picture class="how__image-wrap">
       <source srcset="./images/how__image.webp" type="image/webp" />
       <img class="how__image" src="./images/how__image.png" alt="" />
     </picture>
@@ -19,7 +19,7 @@
           от подделок или изменений в меню.
         </p>
       </div>
-      <button class="button button_theme_main" type="button">
+      <button class="how__button button button_theme_main" type="button">
         <span class="button__text">Пример меню</span>
       </button>
     </div>
