--- a/src/blocks/lead/lead.html
+++ b/src/blocks/lead/lead.html
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="lead__images">
-      <picture>
+      <picture class="lead__image-wrap">
         <source srcset="./images/lead__image-light.webp" type="image/webp" />
         <img
           class="lead__image lead__image_content_light"
@@ -43,7 +43,7 @@
           alt=""
         />
       </picture>
-      <picture>
+      <picture class="lead__image-wrap">
         <source srcset="./images/lead__image-dark.webp" type="image/webp" />
         <img
           class="lead__image lead__image_content_dark"
