--- a/src/blocks/theme/theme.html
+++ b/src/blocks/theme/theme.html
@@ -1,7 +1,56 @@
 <!-- Комфортная цветовая схема -->
-<section class="section section_no_indent">
+<section class="section section_no-indent theme">
   <h2 class="section__title section__title_section-indent">
     Комфортная цветовая схема
     <span class="text-decor text-decor_accent">день/ночь</span>
   </h2>
+  <div class="section__indent theme__card theme__card_theme_light">
+    <h3 class="theme__card-title">Светлая тема</h3>
+    <div class="theme__card-description">
+      <p>
+        Светлая тема веб-сайта подчёркивает минимализм и современность, улучшает
+        читаемость, снижает нагрузку на глаза, создаёт дружелюбную атмосферу
+        и идеально подходит для корпоративных порталов. Она популярна среди
+        дизайнеров и пользователей благодаря своей простоте, элегантности
+        и возможности адаптации под различные устройства и разрешения экрана.
+        Выбор светлой темы позволяет создать профессиональный и привлекательный
+        внешний вид сайта, а также положительно влияет на пользовательский опыт
+        и конверсию.
+      </p>
+    </div>
+    <picture class="theme__card-image-wrap">
+      <source srcset="./images/lead__image-light.webp" type="image/webp" />
+      <img
+        class="theme__card-image"
+        src="./images/lead__image-light.png"
+        alt=""
+      />
+    </picture>
+  </div>
+  <div class="section__indent theme__card theme__card_theme_dark">
+    <h3 class="theme__card-title">Тёмная тема</h3>
+    <div class="theme__card-description">
+      <p>
+        Тёмная тема веб-сайта создаёт стильный и изысканный вид, облегчает
+        чтение на ярком свете и снижает энергопотребление на мобильных
+        устройствах. Она подходит для сайтов, где акцент делается на визуальные
+        эффекты или для пользователей, предпочитающих более спокойную
+        и комфортную среду. Тёмная тема также может быть полезна
+        для разработчиков, которые хотят выделиться на фоне конкурентов
+        и привлечь внимание пользователей.
+      </p>
+    </div>
+    <picture class="theme__card-image-wrap">
+      <source srcset="./images/lead__image-dark.webp" type="image/webp" />
+      <img
+        class="theme__card-image"
+        src="./images/lead__image-dark.png"
+        alt=""
+      />
+    </picture>
+  </div>
+  <p class="theme__caption section__indent">
+    Обе цветовые темы прекрасно дополняют друг друга, позволяя пользователям
+    выбрать наиболее подходящую для них атмосферу и стиль работы.
+  </p>
 </section>
