разметка блока с ценами

--- a/src/blocks/pricing/pricing.html
+++ b/src/blocks/pricing/pricing.html
@@ -1,12 +1,68 @@
 <!-- Регистрируйтесь -->
-<section class="section">
+<section class="section pricing">
   <div class="section__indent section__card section__card_bg_main-color">
     <h2 class="section__title">
       Регистрируйтесь сейчас и пробуйте две недели бесплатно
     </h2>
-    <p>
-      Полный безлимит в удобном едином тарифе. При разовой оплате вы получаете
-      скидку 27%.
-    </p>
+    <div class="section__description">
+      <p>
+        Полный безлимит в удобном едином тарифе. При разовой оплате вы получаете
+        скидку 27%.
+      </p>
+    </div>
+    <div class="pricing__container">
+      <article class="pricing__card">
+        <div class="pricing__card-tabs">
+          <button
+            class="button pricing__card-tab pricing__card-tab_actived"
+            type="button"
+          >
+            <span class="button__text">Оплата за месяц</span>
+          </button>
+          <button class="button pricing__card-tab" type="button">
+            <span class="button__text">pricing__card-tabs</span>
+          </button>
+        </div>
+        <div class="pricing__card-main-info">
+          <h3 class="pricing__card-title">QR-код меню</h3>
+          <p class="pricing__card-description">
+            Первые 14 дней использования системы полностью бесплатны
+          </p>
+          <ul class="pricing__card-list">
+            <li>QR-код меню с фотографиями</li>
+            <li>Подробный состав блюд</li>
+            <li>Список для заказа</li>
+            <li>Повышение среднего чека</li>
+            <li>Стоп-лист</li>
+            <li>Редактирование меню</li>
+            <li>Регулярные обновления</li>
+            <li>Живая поддержка</li>
+            <li>Приём заказов</li>
+            <li>Аналитика</li>
+          </ul>
+        </div>
+        <div class="pricing__card-total">
+          <h4 class="pricing__card-price">2 190 ₽<span>в месяц</span></h4>
+          <h4 class="pricing__card-price">
+            <span>2 190 ₽</span>1 590 ₽<span>в год</span>
+          </h4>
+          <button
+            type="button"
+            class="button button_theme_main button_content_icon-arrow-next"
+          >
+            <span class="button__text">Попробовать бесплатно</span>
+            <span class="button__icon">
+              <svg
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <use href="./images/icons.svg#arrow-right"></use>
+              </svg>
+            </span>
+          </button>
+        </div>
+      </article>
+    </div>
   </div>
 </section>
