--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -1,6 +1,6 @@
 <!-- Шапка -->
 <header class="header">
-  <button class="header__burger" type="button">
+  <button class="header__burger" type="button" aria-label="Открыть меню">
     <span class="header__burger-item">
       <span class="header__burger-item-bar"></span>
       <span class="header__burger-item-bar"></span>
