--- a/src/blocks/lead/lead.html
+++ b/src/blocks/lead/lead.html
@@ -17,7 +17,10 @@
         </p>
       </div>
       <div class="lead__controls">
-        <button class="button button_theme_main button_content_icon-arrow-next">
+        <button
+          class="button button_theme_main button_content_icon-arrow-next"
+          type="button"
+        >
           <span class="button__text">Попробовать</span>
           <span class="button__icon">
             <svg
@@ -29,7 +32,7 @@
             </svg>
           </span>
         </button>
-        <button class="button button_theme_outline-grey">
+        <button class="button button_theme_outline-grey" type="button">
           <span class="button__text">Демо версия</span>
         </button>
       </div>
