--- a/src/blocks/pricing/pricing.html
+++ b/src/blocks/pricing/pricing.html
@@ -20,12 +20,38 @@
             <span class="button__text">Оплата за месяц</span>
           </button>
           <button class="button pricing__card-tab" type="button">
-            <span class="button__text">pricing__card-tabs</span>
+            <span class="button__text">Оплата за год</span>
+          </button>
+        </div>
+        <div class="pricing__card-total-price">
+          <h4 class="pricing__card-price pricing__card-price_actived">
+            2 190 ₽<span class="pricing__card-price-info">в месяц</span>
+          </h4>
+          <h4 class="pricing__card-price">
+            <span class="pricing__card-price-low">2 190 ₽</span>1 590 ₽<span
+              class="pricing__card-price-info"
+              >в год</span
+            >
+          </h4>
+          <button
+            type="button"
+            class="button button_theme_accent button_content_icon-arrow-next"
+          >
+            <span class="button__text">Попробовать бесплатно</span>
+            <span class="button__icon">
+              <svg
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <use href="./images/icons.svg#arrow-right"></use>
+              </svg>
+            </span>
           </button>
         </div>
         <div class="pricing__card-main-info">
           <h3 class="pricing__card-title">QR-код меню</h3>
-          <p class="pricing__card-description">
+          <p class="pricing__card-description text-decor">
             Первые 14 дней использования системы полностью бесплатны
           </p>
           <ul class="pricing__card-list">
@@ -40,27 +66,6 @@
             <li>Приём заказов</li>
             <li>Аналитика</li>
           </ul>
-        </div>
-        <div class="pricing__card-total">
-          <h4 class="pricing__card-price">2 190 ₽<span>в месяц</span></h4>
-          <h4 class="pricing__card-price">
-            <span>2 190 ₽</span>1 590 ₽<span>в год</span>
-          </h4>
-          <button
-            type="button"
-            class="button button_theme_main button_content_icon-arrow-next"
-          >
-            <span class="button__text">Попробовать бесплатно</span>
-            <span class="button__icon">
-              <svg
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-              >
-                <use href="./images/icons.svg#arrow-right"></use>
-              </svg>
-            </span>
-          </button>
         </div>
       </article>
     </div>
