--- a/src/blocks/statistics/statistics.html
+++ b/src/blocks/statistics/statistics.html
@@ -7,7 +7,7 @@
           <span class="statistics__title-span">
             <span>на</span>
             <span class="statistics__title-strong"
-              >80<span class="text-decor text-decor_accent">%</span></span
+              >80<span class="text-decor text-decor_secondary">%</span></span
             >
           </span>
           <span class="statistics__title-span">дешевле, чем бумажное меню</span>
@@ -18,7 +18,7 @@
           <span class="statistics__title-span">
             <span>на</span>
             <span class="statistics__title-strong"
-              >15<span class="text-decor text-decor_accent">%</span></span
+              >15<span class="text-decor text-decor_secondary">%</span></span
             >
           </span>
           <span class="statistics__title-span">выше средний чек</span>
@@ -29,7 +29,7 @@
           <span class="statistics__title-span">
             <span>более</span>
             <span class="statistics__title-strong"
-              >75<span class="text-decor text-decor_accent">%</span></span
+              >75<span class="text-decor text-decor_secondary">%</span></span
             >
           </span>
           <span class="statistics__title-span"
@@ -42,7 +42,7 @@
           <span class="statistics__title-span">
             <span>на</span>
             <span class="statistics__title-strong"
-              >17<span class="text-decor text-decor_accent">%</span></span
+              >17<span class="text-decor text-decor_secondary">%</span></span
             >
           </span>
           <span class="statistics__title-span"
@@ -55,7 +55,7 @@
           <span class="statistics__title-span">
             <span>более</span>
             <span class="statistics__title-strong"
-              >70<span class="text-decor text-decor_accent">%</span></span
+              >70<span class="text-decor text-decor_secondary">%</span></span
             >
           </span>
           <span class="statistics__title-span"
@@ -68,7 +68,7 @@
           <span class="statistics__title-span">
             <span>более</span>
             <span class="statistics__title-strong"
-              >70<span class="text-decor text-decor_accent">%</span></span
+              >70<span class="text-decor text-decor_secondary">%</span></span
             >
           </span>
           <span class="statistics__title-span"
