--- a/src/blocks/theme/theme.html
+++ b/src/blocks/theme/theme.html
@@ -2,7 +2,7 @@
 <section class="section section_no-indent theme">
   <h2 class="section__title section__title_section-indent">
     Комфортная цветовая схема
-    <span class="text-decor text-decor_accent">день/ночь</span>
+    <span class="text-decor text-decor_secondary">день/ночь</span>
   </h2>
   <div class="section__indent theme__card theme__card_theme_light">
     <h3 class="theme__card-title">Светлая тема</h3>
