--- a/src/blocks/step/step.html
+++ b/src/blocks/step/step.html
@@ -1,6 +1,6 @@
 <!-- Настройте Qr-меню -->
 <section class="section section_no-indent step">
-  <h2 class="section__title section__title_section-indent">
+  <h2 class="section__title section__title_section-indent step__title">
     Настройте Qr-меню легко и быстро
   </h2>
   <div class="splide splide_transparent-arrows" id="step-slider">
