--- a/src/blocks/theme/theme.html
+++ b/src/blocks/theme/theme.html
@@ -1,6 +1,6 @@
 <!-- Комфортная цветовая схема -->
 <section class="section section_no-indent theme">
-  <h2 class="section__title section__title_section-indent">
+  <h2 class="section__title section__title_section-indent step__title">
     Комфортная цветовая схема
     <span class="text-decor text-decor_secondary">день/ночь</span>
   </h2>
