--- a/src/blocks/features/features.html
+++ b/src/blocks/features/features.html
@@ -2,7 +2,7 @@
 <section class="section">
   <div class="section__indent">
     <h2 class="section__title">
-      Особенности нашего <span class="text-decor">Qr-меню</span>
+      Особенности нашего <span class="text-decor">Qr‑меню</span>
     </h2>
     <ul class="section__list section__three-columns">
       <li>
