--- a/src/blocks/hiw/hiw.html
+++ b/src/blocks/hiw/hiw.html
@@ -1,15 +1,15 @@
 <!-- Как работает -->
 <section class="section hiw">
   <div class="section__indent section__card section__card_bg_accent hiw__card">
-    <h2 class="section__title">Как работает наше Qr-меню</h2>
+    <h2 class="section__title">Как работает наше Qr‑меню</h2>
     <div class="hiw__container">
       <ul class="hiw__list">
         <li class="hiw__list-item">
-          <h3 class="hiw__list-item-title">Гость сканирует QR-код</h3>
+          <h3 class="hiw__list-item-title">Гость сканирует QR‑код</h3>
           <div class="hiw__list-item-description">
             <p>
               Гости смогут посмотреть меню прямо со своего смартфона —
-              достаточно просканировать QR-код, размещённый на столике.
+              достаточно просканировать QR‑код, размещённый на столике.
             </p>
             <ul class="list-bullet-decor">
               <li>Не нужно устанавливать приложение</li>
