--- a/src/blocks/how/how.html
+++ b/src/blocks/how/how.html
@@ -9,12 +9,12 @@
       <h2 class="section__title how__title">Как это работает?</h2>
       <div class="how__description">
         <p>
-          QR-меню не требует специальных навыков или обучения для использования.
-          Наведите камеру вашего смартфона на QR-код и перейдите по ссылке
+          QR‑меню не требует специальных навыков или обучения для использования.
+          Наведите камеру вашего смартфона на QR‑код и перейдите по ссылке
           на электронное меню демо-ресторана. Приложение устанавливать не нужно.
         </p>
         <p>
-          QR-код вашего онлайн меню можно разместить в любом удобном для гостя
+          QR‑код вашего онлайн меню можно разместить в любом удобном для гостя
           месте. Обеспечивают дополнительную безопасность, так как защищают
           от подделок или изменений в меню.
         </p>
