--- a/src/blocks/pricing/pricing.html
+++ b/src/blocks/pricing/pricing.html
@@ -50,7 +50,7 @@
           </button>
         </div>
         <div class="pricing__card-main-info">
-          <h3 class="pricing__card-title">QR-код меню</h3>
+          <h3 class="pricing__card-title">QR‑код меню</h3>
           <p class="pricing__card-description text-decor">
             Первые 14 дней использования системы полностью бесплатны
           </p>
