--- a/src/blocks/step/step.html
+++ b/src/blocks/step/step.html
@@ -1,7 +1,7 @@
 <!-- Настройте Qr-меню -->
 <section class="section section_no-indent step">
   <h2 class="section__title section__title_section-indent step__title">
-    Настройте Qr-меню легко и быстро
+    Настройте Qr‑меню легко и быстро
   </h2>
   <div class="splide splide_transparent-arrows" id="step-slider">
     <div class="splide__track">
@@ -105,7 +105,7 @@
               <p class="step__card-label-text">Шаг 4</p>
               <h3 class="step__card-title">Распечатайте меню</h3>
               <div class="step__card-description">
-                <p>Распечатайте QR-код и разместите его на столиках</p>
+                <p>Распечатайте QR‑код и разместите его на столиках</p>
               </div>
               <div class="step__card-progress">
                 <span
