--- a/src/blocks/lead/lead.html
+++ b/src/blocks/lead/lead.html
@@ -4,7 +4,7 @@
     <div class="lead__content">
       <h1 class="lead__title">
         <span class="lead__title-span"
-          ><span class="text-decor">QR</span>-меню</span
+          ><span class="text-decor">QR</span>‑меню</span
         >
         <span class="lead__title-span lead__title-span_size-sm"
           >для заведений</span
