--- a/src/blocks/pricing/pricing.html
+++ b/src/blocks/pricing/pricing.html
@@ -1,6 +1,6 @@
 <!-- Регистрируйтесь -->
 <section class="section pricing">
-  <div class="section__indent section__card section__card_bg_main-color">
+  <div class="section__indent section__card section__card_bg_main-color pricing__indent">
     <h2 class="section__title">
       Регистрируйтесь сейчас и пробуйте две недели бесплатно
     </h2>
@@ -10,64 +10,62 @@
         скидку 27%.
       </p>
     </div>
-    <div class="pricing__container">
-      <article class="pricing__card">
-        <div class="pricing__card-tabs">
-          <button
-            class="button pricing__card-tab pricing__card-tab_actived"
-            type="button"
+    <article class="pricing__card">
+      <div class="pricing__card-tabs">
+        <button
+          class="button pricing__card-tab pricing__card-tab_actived"
+          type="button"
+        >
+          <span class="button__text">Оплата за месяц</span>
+        </button>
+        <button class="button pricing__card-tab" type="button">
+          <span class="button__text">Оплата за год</span>
+        </button>
+      </div>
+      <div class="pricing__card-total-price">
+        <h4 class="pricing__card-price pricing__card-price_actived">
+          2 190 ₽<span class="pricing__card-price-info">в месяц</span>
+        </h4>
+        <h4 class="pricing__card-price">
+          <span class="pricing__card-price-low">2 190 ₽</span>1 590 ₽<span
+            class="pricing__card-price-info"
+            >в год</span
           >
-            <span class="button__text">Оплата за месяц</span>
-          </button>
-          <button class="button pricing__card-tab" type="button">
-            <span class="button__text">Оплата за год</span>
-          </button>
-        </div>
-        <div class="pricing__card-total-price">
-          <h4 class="pricing__card-price pricing__card-price_actived">
-            2 190 ₽<span class="pricing__card-price-info">в месяц</span>
-          </h4>
-          <h4 class="pricing__card-price">
-            <span class="pricing__card-price-low">2 190 ₽</span>1 590 ₽<span
-              class="pricing__card-price-info"
-              >в год</span
+        </h4>
+        <button
+          type="button"
+          class="button button_theme_accent button_content_icon-arrow-next"
+        >
+          <span class="button__text">Попробовать бесплатно</span>
+          <span class="button__icon">
+            <svg
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
             >
-          </h4>
-          <button
-            type="button"
-            class="button button_theme_accent button_content_icon-arrow-next"
-          >
-            <span class="button__text">Попробовать бесплатно</span>
-            <span class="button__icon">
-              <svg
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-              >
-                <use href="./images/icons.svg#arrow-right"></use>
-              </svg>
-            </span>
-          </button>
-        </div>
-        <div class="pricing__card-main-info">
-          <h3 class="pricing__card-title">QR‑код меню</h3>
-          <p class="pricing__card-description text-decor">
-            Первые 14 дней использования системы полностью бесплатны
-          </p>
-          <ul class="pricing__card-list">
-            <li>QR-код меню с фотографиями</li>
-            <li>Подробный состав блюд</li>
-            <li>Список для заказа</li>
-            <li>Повышение среднего чека</li>
-            <li>Стоп-лист</li>
-            <li>Редактирование меню</li>
-            <li>Регулярные обновления</li>
-            <li>Живая поддержка</li>
-            <li>Приём заказов</li>
-            <li>Аналитика</li>
-          </ul>
-        </div>
-      </article>
-    </div>
+              <use href="./images/icons.svg#arrow-right"></use>
+            </svg>
+          </span>
+        </button>
+      </div>
+      <div class="pricing__card-main-info">
+        <h3 class="pricing__card-title">QR‑код меню</h3>
+        <p class="pricing__card-description text-decor">
+          Первые 14 дней использования системы полностью бесплатны
+        </p>
+        <ul class="pricing__card-list">
+          <li>QR-код меню с фотографиями</li>
+          <li>Подробный состав блюд</li>
+          <li>Список для заказа</li>
+          <li>Повышение среднего чека</li>
+          <li>Стоп-лист</li>
+          <li>Редактирование меню</li>
+          <li>Регулярные обновления</li>
+          <li>Живая поддержка</li>
+          <li>Приём заказов</li>
+          <li>Аналитика</li>
+        </ul>
+      </div>
+    </article>
   </div>
 </section>
