--- a/src/blocks/theme/theme.html
+++ b/src/blocks/theme/theme.html
@@ -1,7 +1,7 @@
 <!-- Комфортная цветовая схема -->
 <section class="section section_no-indent theme">
   <h2 class="section__title section__title_section-indent step__title">
-    Комфортная цветовая схема
+    Комфортная цветовая схема <br>
     <span class="text-decor text-decor_secondary">день/ночь</span>
   </h2>
   <div class="section__indent theme__card theme__card_theme_light">
