--- a/src/blocks/pricing/pricing.html
+++ b/src/blocks/pricing/pricing.html
@@ -1,6 +1,8 @@
 <!-- Регистрируйтесь -->
 <section class="section pricing">
-  <div class="section__indent section__card section__card_bg_main-color pricing__indent">
+  <div
+    class="section__indent section__card section__card_bg_main-color pricing__indent"
+  >
     <h2 class="section__title">
       Регистрируйтесь сейчас и пробуйте две недели бесплатно
     </h2>
